Fixing broken insert

--- a/app/globals.css
+++ b/app/globals.css
@@ -290,6 +290,10 @@ article tbody tr + tr {
   font-size: 2.2rem;
 }
 
+.note--private {
+  background-color: #e3e3e3;
+}
+
 div.note--navigation {
   margin: 2rem 0 0 0;
   display: flex;
